# power-beam-control

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  arm-none-eabi-toolchain.cmake
DroneControl/: .cproject  .mxproject  .project  Project.ioc  Project.launch
DroneControl/Core/Inc/: firstflight.h  stm32u5xx_hal_conf.h  stm32u5xx_it.h
DroneControl/Core/Src/: firstflight.c  main.c  stm32u5xx_hal_msp.c  stm32u5xx_it.c
DroneControl/Debug/: Project.list  makefile  objects.list
DroneControl/Debug/Core/Src/: firstflight.cyclo  main.cyclo  stm32u5xx_hal_msp.cyclo  stm32u5xx_it.cyclo  subdir.mk
DroneControl/Debug/Core/Startup/: subdir.mk
DroneControl/Debug/Drivers/STM32U5xx_HAL_Driver/Src/: subdir.mk
core/: firstflight.c  main.c  main.txt
core/inc/: firstflight.h
core/src/: firstflight.c
libraries/: CMakeLists.txt
